--- a/src/ProductListingPage.scss
+++ b/src/ProductListingPage.scss
@@ -1,11 +1,13 @@
-.cart{
-    margin:50px 0 0 50px;
-    display: flex;
-    .products{
-        flex:4;
+.cart {
+  margin: 50px 0 0 50px;
+  display: flex;
+  .products {
+    flex: 1 1 100%;
+    &:last-child {
+      flex: 1 1 50%;
     }
-    .purchases{
-        flex:2;
-
-    }
+  }
+  .purchases {
+    flex: 2;
+  }
 }
