--- a/src/Cart/Cart.scss
+++ b/src/Cart/Cart.scss
@@ -1,16 +1,18 @@
 .purchase {
   border: 1px solid lightgray;
   border-radius: 4px;
-  soverflow: hidden;
-  margin: 25px;
+  overflow: hidden;
+  margin: 6px;
   &-item {
     display: flex;
-    padding: 15px;
+    padding: 8px;
+    align-content: center;
+    justify-content: center;
     background-color: #eaeaea;
     &__image {
       flex: 1;
       img {
-        height: 80px;
+        height: 36px;
         border: 1px solid darkgray;
         border-radius: 4px;
       }
@@ -30,7 +32,7 @@
   font-size: 20px;
   padding: 20px 5px;
   background-color: #b2d4ea;
-  margin: 0 25px;
+  margin: 0 6px;
   &__label {
     flex: 2;
     padding-left: 35px;
