--- a/src/ProductListingPage.scss
+++ b/src/ProductListingPage.scss
@@ -1,4 +1,4 @@
-.cart {
+.shopping-cart  {
   margin: 50px 0 0 50px;
   display: flex;
   .products {
@@ -7,7 +7,7 @@
       flex: 1 1 50%;
     }
   }
-  .purchases {
+  .cart {
     flex: 2;
   }
 }
